--- a/templates/conventions/prets.html
+++ b/templates/conventions/prets.html
@@ -37,7 +37,7 @@
                                         <th scope="col">Numéro</th>
                                         <th scope="col">Date d'octroi</th>
                                         <th scope="col">Durée</th>
-                                        <th scope="col">Montant {% if formset.count %}{% include "common/mandatory_field.html" %}{% endif %}</th>
+                                        <th scope="col">Montant {% if formset.total_form_count %}{% include "common/mandatory_field.html" %}{% endif %}</th>
                                         <th scope="col">Préteur</th>
                                         <th scope="col">Préciser le prêteur si 'Autre'</th>
                                     </tr>
