--- a/templates/conventions/annexes.html
+++ b/templates/conventions/annexes.html
@@ -7,7 +7,7 @@
                 {% csrf_token %}
                 <div class="fr-grid-row fr-grid-row--gutters">
                     <div class="fr-col-md-12 fr-col-lg-10 fr-col-offset-lg-1 fr-my-5w">
-                        <h2>Etape 7/{{ nb_steps }} - Annexes</h2>
+                        <h2>Etape {{convention_form_step}}/{{ nb_steps }} - Annexes</h2>
                         {% include "common/convention_edit_info.html" with convention=convention %}
                         {% include "common/mandatory_fields_info.html" %}
 
@@ -34,12 +34,12 @@
 
                                 <thead>
                                     <tr>
-                                        <th scope="col" style='min-width:150px;'>Type d'annexe {% include "common/mandatory_field.html" %}</th>
-                                        <th scope="col" style='min-width:200px;'>Désignation des logements {% include "common/mandatory_field.html" %}</th>
-                                        <th scope="col" style='min-width:150px;'>Typologie des logements {% include "common/mandatory_field.html" %}</th>
-                                        <th scope="col" style='min-width:120px;'>Surface de l'annexe {% include "common/mandatory_field.html" %}</th>
-                                        <th scope="col" style='min-width:120px;'>Loyer unitaire en € {% include "common/mandatory_field.html" %}</th>
-                                        <th scope="col" style='min-width:120px;'>Loyer maxinum du logement en € {% include "common/mandatory_field.html" %}</th>
+                                        <th scope="col" style='min-width:150px;'>Type d'annexe {% if formset.total_form_count %}{% include "common/mandatory_field.html" %}{% endif %}</th>
+                                        <th scope="col" style='min-width:200px;'>Désignation des logements {% if formset.total_form_count %}{% include "common/mandatory_field.html" %}{% endif %}</th>
+                                        <th scope="col" style='min-width:150px;'>Typologie des logements {% if formset.total_form_count %}{% include "common/mandatory_field.html" %}{% endif %}</th>
+                                        <th scope="col" style='min-width:120px;'>Surface de l'annexe {% if formset.total_form_count %}{% include "common/mandatory_field.html" %}{% endif %}</th>
+                                        <th scope="col" style='min-width:120px;'>Loyer unitaire en € {% if formset.total_form_count %}{% include "common/mandatory_field.html" %}{% endif %}</th>
+                                        <th scope="col" style='min-width:120px;'>Loyer maxinum du logement en € {% if formset.total_form_count %}{% include "common/mandatory_field.html" %}{% endif %}</th>
                                     </tr>
                                 </thead>
                                 <tbody>
@@ -103,8 +103,8 @@
                     </div>
                 </div>
                 <div class="fr-col-md-12 fr-col-lg-10 fr-col-offset-lg-1 fr-py-5w" style="display: flex;flex-direction: row;align-items: center;justify-content: space-between;">
-                    {% include "common/button/precedent.html" with precedent='conventions:step6' convention_uuid=convention.uuid %}
-                    {% include "common/button/suivant.html" with suivant='conventions:step7' convention_uuid=convention.uuid %}
+                    {% include "common/button/precedent.html" with precedent='conventions:logements' convention_uuid=convention.uuid %}
+                    {% include "common/button/suivant.html" with suivant='conventions:annexes' convention_uuid=convention.uuid %}
                 </div>
             </form>
         </div>
