--- a/templates/conventions/edd.html
+++ b/templates/conventions/edd.html
@@ -7,77 +7,13 @@
                 {% csrf_token %}
                 <div class="fr-grid-row fr-grid-row--gutters">
                     <div class="fr-col-md-12 fr-col-lg-10 fr-col-offset-lg-1 fr-my-5w">
-                        <h2>Etape 4/{{ nb_steps }} - Informations cadastrales sur le programme</h2>
+                        <h2>Etape {{convention_form_step}}/{{ nb_steps }} - État descriptif de division</h2>
                         {% include "common/convention_edit_info.html" with convention=convention %}
                         {% include "common/mandatory_fields_info.html" %}
 
-                        {% include "common/form/input_text.html" with form_input=form.permis_construire label="Numéro de permis construire" %}
-
-                        <div class="fr-mb-2w">
-                            <div class="fr-grid-row fr-grid-row--gutters">
-                                <div class="fr-col-12 fr-col-md-12 fr-col-lg-6 fr-mb-2w">
-                                    {% include "common/form/input_date.html" with form_input=form.date_acte_notarie label="Date de l'acte notarié" %}
-                                </div>
-                                <div class="fr-col-12 fr-col-md-12 fr-col-lg-6 fr-pl-md-1w fr-mb-2w">
-                                    {% include "common/form/input_date.html" with form_input=form.date_achat label="Date d'achat" %}
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="fr-mb-2w">
-                            <div class="fr-grid-row fr-grid-row--gutters">
-                                <div class="fr-col-12 fr-col-md-12 fr-col-lg-6 fr-mb-2w">
-                                    {% include "common/form/input_date.html" with form_input=form.date_achevement_previsible label="Date d'achèvement previsible" %}
-                                </div>
-                                <div class="fr-col-12 fr-col-md-12 fr-col-lg-6 fr-pl-md-1w fr-mb-2w">
-                                    {% include "common/form/input_date.html" with form_input=form.date_achevement label="Date d'achèvement ou d'obtention de certificat de conformité" %}
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="fr-input-group {% if form.vendeur.errors %}fr-select-group--error{% endif %}">
-                            <label class="fr-label fr-mb-1w" for="{{form.vendeur.id_for_label}}">
-                                Vendeur
-                                {% include "common/mandatory_field.html" %}
-                            </label>
-                            {% include "common/form/input_upload_button.html" with textarea=True %}
-                            {% include "common/form/input_textarea.html" with form_input=form.vendeur rows=5 %}
-                        </div>
-
-                        <div class="fr-input-group {% if form.acquereur.errors %}fr-select-group--error{% endif %}">
-                            <label class="fr-label fr-mb-1w" for="{{form.acquereur.id_for_label}}">
-                                Acquéreur
-                                {% include "common/mandatory_field.html" %}
-                            </label>
-                            {% include "common/form/input_upload_button.html" with textarea=True %}
-                            {% include "common/form/input_textarea.html" with form_input=form.acquereur rows=5 %}
-                        </div>
-
-                        <div class="fr-input-group {% if form.reference_notaire.errors %}fr-select-group--error{% endif %}">
-                            <label class="fr-label fr-mb-1w" for="{{form.reference_notaire.id_for_label}}">
-                                Référence du notaire
-                            </label>
-                            {% include "common/form/input_upload_button.html" with textarea=True %}
-                            {% include "common/form/input_textarea.html" with form_input=form.reference_notaire rows=5 %}
-                        </div>
-
-                        <div class="fr-input-group {% if form.reference_publication_acte.errors %}fr-select-group--error{% endif %}">
-                            <label class="fr-label fr-mb-1w" for="{{form.reference_publication_acte.id_for_label}}">
-                                Référence de publication de l'acte
-                            </label>
-                            {% include "common/form/input_upload_button.html" with textarea=True %}
-                            {% include "common/form/input_textarea.html" with form_input=form.reference_publication_acte rows=5 %}
-                        </div>
-
-                        <div class="fr-input-group {% if form.acte_de_vente.errors %}fr-select-group--error{% endif %}">
-                            <label class="fr-label fr-mb-1w" for="{{form.acte_de_vente.id_for_label}}">
-                                Acte de vente
-                            </label>
-                            {% include "common/form/input_upload_button.html" with textarea=False %}
-                        </div>
-
-                        <hr class="fr-col-12 fr-my-3w">
-                        <h4>État descriptif de division (EDD volumétrique et/ou EDD simplifié)</h4>
+                        <p><span class="fr-fi-alert-line fr-mr-1w" aria-hidden="true"></span>Pour rappel, l'état descriptif de division est obligatoire dès qu’un programme comporte plusieurs financements
+                            et donc plusieurs conventions. Il existe 2 types d’EDD: EDD simplifié & EDD volumétrique
+                        </p>
 
                         <div class="fr-input-group {% if form.edd_volumetrique.errors %}fr-select-group--error{% endif %}">
                             <label class="fr-label fr-mb-1w" for="{{form.edd_volumetrique.id_for_label}}">
@@ -110,9 +46,9 @@
                             <table>
                                 <thead>
                                     <tr>
-                                        <th scope="col">Financement {% include "common/mandatory_field.html" %}</th>
-                                        <th scope="col">Désignation {% include "common/mandatory_field.html" %}</th>
-                                        <th scope="col">Type {% include "common/mandatory_field.html" %}</th>
+                                        <th scope="col">Financement {% if formset.total_form_count %}{% include "common/mandatory_field.html" %}{% endif %}</th>
+                                        <th scope="col">Désignation {% if formset.total_form_count %}{% include "common/mandatory_field.html" %}{% endif %}</th>
+                                        <th scope="col">Type {% if formset.total_form_count %}{% include "common/mandatory_field.html" %}{% endif %}</th>
                                     </tr>
                                 </thead>
                                 <tbody>
@@ -168,8 +104,8 @@
                 </div>
 
                 <div class="fr-col-md-12 fr-col-lg-10 fr-col-offset-lg-1 fr-py-5w button-bar">
-                    {% include "common/button/precedent.html" with precedent='conventions:step3' convention_uuid=convention.uuid %}
-                    {% include "common/button/suivant.html" with suivant='conventions:step4' convention_uuid=convention.uuid %}
+                    {% include "common/button/precedent.html" with precedent='conventions:cadastre' convention_uuid=convention.uuid %}
+                    {% include "common/button/suivant.html" with suivant='conventions:edd' convention_uuid=convention.uuid %}
                 </div>
 
 
