display description on toggle help

--- a/templates/layout/header.html
+++ b/templates/layout/header.html
@@ -45,7 +45,7 @@
                                         </button>
                                     </li>
                                     <li>
-                                        <a class="fr-link" href="//docs.appel.beta.gouv.fr" target="_blank">
+                                        <a class="fr-link" href="//docs.appel.beta.gouv.fr" target="_blank" rel="noopener">
                                             <span class="fr-fi-question-line" aria-hidden="true"></span>
                                         </a>
                                     </li>
@@ -62,7 +62,7 @@
                                         </button>
                                     </li>
                                     <li>
-                                        <a class="fr-link" href="//docs.appel.beta.gouv.fr" target="_blank">
+                                        <a class="fr-link" href="//docs.appel.beta.gouv.fr" target="_blank" rel="noopener">
                                             <span class="fr-fi-question-line" aria-hidden="true"></span>
                                         </a>
                                     </li>
