--- a/templates/common/form/input_date.html
+++ b/templates/common/form/input_date.html
@@ -3,9 +3,10 @@
         <label class="fr-label fr-mb-1w" for="{{form_input.id_for_label}}">
             {{ label }}
             {% if mandatory %}&nbsp;{% include "common/mandatory_field.html" %}{% endif %}
-
-            {% if help %}&nbsp;<a class="fr-link fr-text--xs" data-fr-opened="false" aria-controls="{{help_modal}}" href="#" style="min-height: 0; padding: .0rem .75rem;">{{help}}</a>{% endif %}
-            {% if description %}<span class="fr-hint-text">{{description}}</span>{% endif %}
+            {% if description %}
+                &nbsp;<button class="fr-link fr-link--sm fr-fi-information-line" style="min-height: 0; padding: .1rem;" type='button' onclick="toggle('desc_date_deliberation')"></button>
+                <span class="fr-hint-text" id="desc_date_deliberation" style="display:none;">{{description}}</span>
+            {% endif %}
         </label>
     {% endif %}
     <div class="fr-input-wrap fr-fi-calendar-line" >
@@ -23,7 +24,15 @@
     {% endfor %}
 </div>
 
-
-
-
-
+<script>
+    function toggle(element_id) {
+        element = document.getElementById(element_id);
+        display = element.style.display;
+        if (display == 'none') {
+            element.style.display = 'block';
+        }
+        else {
+            element.style.display = 'none';
+        }
+    }
+</script>
