--- a/templates/conventions/bailleur.html
+++ b/templates/conventions/bailleur.html
@@ -45,8 +45,8 @@
                                     {% include "common/form/input_text.html" with form_input=form.dg_fonction label="Fonction du signataire de la convention" mandatory=True %}
                                 </div>
                                 <div class="fr-col-12 fr-col-md-12 fr-col-lg-6 fr-pl-md-1w fr-mb-2w">
-                                    {% include "common/form/input_date.html" with form_input=form.dg_date_deliberation label="Date de délibération" mandatory=True help="Plus d'information" help_modal='aide-ddd' %} <!-- description="Date à laquelle le signataire a reçu le mandat lui permettant de signer la convention" -->
-                                    <dialog aria-labelledby="fr-modal-title-modal-1" role="dialog" id="aide-ddd" class="fr-modal">
+                                    {% include "common/form/input_date.html" with form_input=form.dg_date_deliberation label="Date de délibération" mandatory=True description="Date à laquelle le signataire a reçu le mandat lui permettant de signer la convention" %}
+                                    <!-- <dialog aria-labelledby="fr-modal-title-modal-1" role="dialog" id="aide-ddd" class="fr-modal">
                                         <div class="fr-container fr-container--fluid fr-container-md">
                                             <div class="fr-grid-row fr-grid-row--center">
                                                 <div class="fr-col-12 fr-col-md-8 fr-col-lg-6">
@@ -62,7 +62,7 @@
                                                 </div>
                                             </div>
                                         </div>
-                                    </dialog>
+                                    </dialog> -->
                                 </div>
                             </div>
                         </div>
