--- a/templates/layout/footer.html
+++ b/templates/layout/footer.html
@@ -19,16 +19,16 @@
                 </p>
                 <ul class="fr-footer__content-list">
                     <li class="fr-footer__content-item">
-                        <a class="fr-footer__content-link" href="https://legifrance.gouv.fr" target="blank">legifrance.gouv.fr</a>
+                        <a class="fr-footer__content-link" href="https://legifrance.gouv.fr" target="_blank" rel="noopener">legifrance.gouv.fr</a>
                     </li>
                     <li class="fr-footer__content-item">
-                        <a class="fr-footer__content-link" href="https://gouvernement.fr" target="blank">gouvernement.fr</a>
+                        <a class="fr-footer__content-link" href="https://gouvernement.fr" target="_blank" rel="noopener">gouvernement.fr</a>
                     </li>
                     <li class="fr-footer__content-item">
-                        <a class="fr-footer__content-link" href="https://service-public.fr" target="blank">service-public.fr</a>
+                        <a class="fr-footer__content-link" href="https://service-public.fr" target="_blank" rel="noopener">service-public.fr</a>
                     </li>
                     <li class="fr-footer__content-item">
-                        <a class="fr-footer__content-link" href="https://data.gouv.fr" target="blank">data.gouv.fr</a>
+                        <a class="fr-footer__content-link" href="https://data.gouv.fr" target="_blank" rel="noopener">data.gouv.fr</a>
                     </li>
                 </ul>
             </div>
@@ -52,7 +52,7 @@
                 </li>
             </ul>
             <div class="fr-footer__bottom-copy">
-                <p>Sauf mention contraire, tous les textes de ce site sont sous <a href="https://github.com/etalab/licence-ouverte/blob/master/LO.md" target="_blank">licence etalab-2.0</a>
+                <p>Sauf mention contraire, tous les textes de ce site sont sous <a href="https://github.com/etalab/licence-ouverte/blob/master/LO.md" target="_blank" rel="noopener">licence etalab-2.0</a>
                 </p>
             </div>
         </div>
