add help to Vendeur and Acquéreur fields

--- a/templates/common/form/input_date.html
+++ b/templates/common/form/input_date.html
@@ -4,8 +4,8 @@
             {{ label }}
             {% if mandatory %}&nbsp;{% include "common/mandatory_field.html" %}{% endif %}
             {% if description %}
-                &nbsp;<button class="fr-link fr-link--sm fr-fi-information-line" style="min-height: 0; padding: .1rem;" type='button' onclick="toggle('desc_date_deliberation')"></button>
-                <span class="fr-hint-text" id="desc_date_deliberation" style="display:none;">{{description}}</span>
+                &nbsp;<button class="fr-link fr-link--sm fr-fi-information-line" style="min-height: 0; padding: .1rem;" type='button' onclick="toggle('{{form_input.id_for_label}}_description')"></button>
+                <span class="fr-hint-text" id="{{form_input.id_for_label}}_description" style="display:none;">{{description}}</span>
             {% endif %}
         </label>
     {% endif %}
@@ -23,16 +23,3 @@
         </p>
     {% endfor %}
 </div>
-
-<script>
-    function toggle(element_id) {
-        element = document.getElementById(element_id);
-        display = element.style.display;
-        if (display == 'none') {
-            element.style.display = 'block';
-        }
-        else {
-            element.style.display = 'none';
-        }
-    }
-</script>
