--- a/templates/conventions/recapitulatif.html
+++ b/templates/conventions/recapitulatif.html
@@ -5,7 +5,7 @@
         <div class="fr-container">
             <div class="fr-grid-row fr-grid-row--gutters">
                 <div class="fr-col-md-12 fr-col-lg-10 fr-col-offset-lg-1 fr-my-5w">
-                    <h2>Etape {{step}}/{{ nb_steps }} - Récapitulatif</h2>
+                    <h2>Etape {{convention_form_step}}/{{ nb_steps }} - Récapitulatif</h2>
                     {% include "common/convention_edit_info.html" with convention=convention %}
 
                     {% if not convention.is_submitted %}
