change surface for a string

--- a/templates/conventions/cadastre.html
+++ b/templates/conventions/cadastre.html
@@ -124,7 +124,7 @@
                                                 {% include "common/form/input_text.html" with form_input=form_pret.lieudit %}
                                             </td>
                                             <td>
-                                                {% include "common/form/input_number.html" with form_input=form_pret.surface %}
+                                                {% include "common/form/input_text.html" with form_input=form_pret.surface %}
                                             </td>
                                         </tr>
                                     {% endfor %}
