--- a/templates/registration/password_reset_complete.html
+++ b/templates/registration/password_reset_complete.html
@@ -1,6 +1,22 @@
-{% extends "base_generic.html" %}
+{% extends "layout/base.html" %}
 
 {% block content %}
-    <h1>Votre mot de passe a été mis à jour !</h1>
+    <div class="fr-container-fluid ds_banner fr-pb-3w">
+        <div class="fr-container">
+            <div class="fr-grid-row fr-grid-row--gutters">
+                <div class="fr-col-lg-6 fr-col-offset-lg-1 fr-mb-2w">
+                    <h2 class="fr-mt-3w fr-mt-md-5w fr-mb-5w">Mot de passe oublié</h2>
+                    <p class="fr-mb-3w">
+                        Votre mot de passe a été mis à jour !
+                    </p>
+                    <p class="fr-mb-3w">
+                        <a href="{% url 'login' %}">Identifiez vous à nouveau ?</a>
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <h1></h1>
     <p><a href="{% url 'login' %}">Identifiez vous à nouveau ?</a></p>
 {% endblock %}
