--- a/templates/registration/password_reset_done.html
+++ b/templates/registration/password_reset_done.html
@@ -1,6 +1,19 @@
 {% extends "layout/base.html" %}
 
 {% block content %}
-    <p>Nous vous avons envoyé un couriel pour réinitialiser votre mot de passe. </p>
-    <p>S'il n'est pas arrivé d'ici quelques minutes, merci de vérifier dans votre dossier 'spam'</p>
+    <div class="fr-container-fluid ds_banner fr-pb-3w">
+        <div class="fr-container">
+            <div class="fr-grid-row fr-grid-row--gutters">
+                <div class="fr-col-lg-6 fr-col-offset-lg-1 fr-mb-2w">
+                    <h2 class="fr-mt-3w fr-mt-md-5w fr-mb-5w">Mot de passe oublié</h2>
+                    <p class="fr-mb-3w">
+                        Nous vous avons envoyé un couriel pour réinitialiser votre mot de passe.
+                    </p>
+                    <p class="fr-mb-3w">
+                        S'il n'est pas arrivé d'ici quelques minutes, merci de vérifier dans votre dossier 'spam'.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
 {% endblock %}
