--- a/templates/registration/password_reset_confirm.html
+++ b/templates/registration/password_reset_confirm.html
@@ -1,30 +1,70 @@
 {% extends "layout/base.html" %}
-
 {% block content %}
-    {% if validlink %}
-        <p>Veuillez saisir votre nouveau mot de passe et le confirmer.</p>
-        <form action="" method="post">
-            {% csrf_token %}
-            <table>
-                <tr>
-                    <td>{{ form.new_password1.errors }}
-                        <label for="id_new_password1">Nouveau mot de passe:</label></td>
-                    <td>{{ form.new_password1 }}</td>
-                </tr>
-                <tr>
-                    <td>{{ form.new_password2.errors }}
-                        <label for="id_new_password2">Confirmation du mot de passe:</label></td>
-                    <td>{{ form.new_password2 }}</td>
-                </tr>
-                <tr>
-                    <td></td>
-                    <td><input type="submit" value="Modifier mon mot de passe" /></td>
-                </tr>
-            </table>
-        </form>
-    {% else %}
-        <h1>La modification de votre mot de passe a échoué</h1>
-        <p>Le Lien de modification de mot de passe est invalide, probablement parce qu'il a déjà été utilisé.</p>
-        <p>Veuillez ré-essayer de mettre à jour votre mot de passe en cliquant sur le lien <a href="{% url 'password_reset' %}">Mot de passe oublié ?</a></p>
-    {% endif %}
+    <div class="fr-container-fluid ds_banner">
+        <div class="fr-container">
+            {% if validlink %}
+                <div class="fr-grid-row fr-grid-row--gutters">
+                    <div class="fr-col-lg-6 fr-col-offset-lg-1 fr-mb-2w">
+                        <h2 class="fr-mt-3w fr-mt-md-5w fr-mb-5w">Mot de passe oublié</h2>
+                        <p class="fr-mb-3w">
+                            Veuillez remplir le formulaire ci-contre pour modifier votre mot de passe
+                        </p>
+                    </div>
+                    <div class="fr-col-12 fr-col-lg-5 fr-pl-0 fr-pl-md-4w fr-py-4w fr-pb-0">
+                        <form action="" method="post">
+                            {% csrf_token %}
+                            <div class="fr-input-group fr-mt-3w {% if form.new_password1.errors %}fr-input-group--error{% endif %}">
+                                <label class="fr-label" for="{{form.new_password1.id_for_label}}">Nouveau mot de passe:</label>
+                                <input
+                                    class="fr-input {% if form.new_password1.errors %}fr-input--error{% endif %}"
+                                    type="password"
+                                    id="{{form.new_password1.id_for_label}}"
+                                    name="new_password1"
+                                >
+                            </div>
+                            {% if form.new_password1.errors %}
+                                <p id="text-input-error-desc-error" class="fr-error-text">
+                                    {{ form.new_password1.errors }}
+                                </p>
+                            {% endif %}
+                            <div class="fr-input-group fr-mt-3w {% if form.new_password2.errors %}fr-input-group--error{% endif %}">
+                                <label class="fr-label" for="{{form.new_password2.id_for_label}}">Confirmation du mot de passe:</label>
+                                <input
+                                    class="fr-input {% if form.new_password2.errors %}fr-input--error{% endif %}"
+                                    type="password"
+                                    id="{{form.new_password2.id_for_label}}"
+                                    name="new_password2"
+                                >
+                            </div>
+                            {% if form.new_password2.errors %}
+                                <p id="text-input-error-desc-error" class="fr-error-text">
+                                    {{ form.new_password2.errors }}
+                                </p>
+                            {% endif %}
+                            <div class="fr-mt-3w">
+                                <button class="fr-btn" type="submit">
+                                    Modifier mon mot de passe
+                                </button>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            {% else %}
+                <div class="fr-grid-row fr-grid-row--gutters">
+
+                    <div class="fr-col-lg-10 fr-col-offset-lg-1 fr-mb-2w">
+                        <h2 class="fr-mt-3w fr-mt-md-5w fr-mb-5w">La modification de votre mot de passe a échoué</h2>
+                        <p class="fr-mb-3w">
+                            Le Lien de modification de mot de passe est invalide, probablement parce qu'il a déjà été utilisé.
+                        </p>
+                        <p class="fr-mb-3w">
+                            Veuillez ré-essayer de mettre à jour votre mot de passe en cliquant sur le lien <a href="{% url 'password_reset' %}">Mot de passe oublié ?</a></p>
+                        Veuillez remplir le formulaire ci-contre pour modifier votre mot de passe
+                    </p>
+                </div>
+                </div>
+            {% endif %}
+        </div>
+    </div>
+    <hr class="fr-grid-row fr-col-xs-10 fr-col-7 fr-my-7w">
 {% endblock %}
